terraform/final-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-test
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /final-test
        pathType: Prefix
        backend:
          service:
            name: nginx-test
            port:
              number: 80
